# comp-edsl

./: .ghci  .travis.yml  LICENSE  README.md  comp-edsl.cabal  compass.cabal
benchmarks/: Monitoring.hs
examples/: NanoFeldspar.hs  Simplify.hs
src/Control/: Monitoring.hs
src/Data/: EitherUtils.hs
src/EDSL/: AG.hs  Constructs.hs  Eval.hs  Syntax.hs
src/Language/: Embedded.hs
src/Language/Embedded/: AG.hs  Algorithms.hs  Constructs.hs  Environment.hs  Eval.hs  Sharing.hs  SimpleCodeMotion.hs  Syntax.hs  Testing.hs
tests/: General.hs  GeneralTests.hs  NanoFeldsparTest.hs  NanoFeldsparTests.hs
tests/gold/: matMul.txt  scProd.txt
