name:           compass
version:        0.1
synopsis:       A library for creating Deeply embedded DSLs in Haskell
description:    A library for creating Deeply embedded DSLs in Haskell
                .
                Compass might stand for "Compositional Abstract Syntax and Semantics".
homepage:       https://github.com/emilaxelsson/compass
bug-reports:    https://github.com/emilaxelsson/compass/issues
license:        BSD3
license-file:   LICENSE
author:         Emil Axelsson
maintainer:     emax@chalmers.se
copyright:      Copyright (c) 2014, Emil Axelsson
Homepage:       https://github.com/emilaxelsson/syntactic
Bug-reports:    https://github.com/emilaxelsson/syntactic/issues
stability:      experimental
category:       Language
build-type:     Simple
cabal-version:  >=1.10
Tested-with:    GHC==7.6.2, GHC==7.8.2

extra-source-files:
  examples/*.hs

library
  exposed-modules:
    Control.Monitoring
    Data.EitherUtils
    Language.Embedded
    Language.Embedded.Syntax
    Language.Embedded.Constructs
    Language.Embedded.Eval
    Language.Embedded.Algorithms
    Language.Embedded.Sharing
    Language.Embedded.Testing
    Language.Embedded.SimpleCodeMotion

  hs-source-dirs:
    src

  build-depends:
    base >= 4.6 && <5.0,
    compdata >= 0.9 && < 0.10,
    containers,
    mtl,
    open-typerep,
    QuickCheck,
    syntactic >= 2.0,
    testing-feat

  default-language:
    Haskell2010

  default-extensions:
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    Rank2Types
    ScopedTypeVariables
    TypeFamilies
    TypeOperators

  other-extensions:
    NoMonomorphismRestriction
    OverlappingInstances
    TemplateHaskell
    UndecidableInstances

test-suite General
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: GeneralTests.hs

  default-language: Haskell2010

  default-extensions:
    FlexibleContexts

  other-extensions:
    NoMonomorphismRestriction
    ScopedTypeVariables
    TemplateHaskell
    TypeOperators

  build-depends:
    compdata,
    compass,
    containers,
    base,
    tasty,
    tasty-quickcheck,
    tasty-th

test-suite NanoFeldspar
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: NanoFeldsparTests.hs

  default-language: Haskell2010

  default-extensions:

  other-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    GADTs
    MultiParamTypeClasses
    NoMonomorphismRestriction
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    TypeOperators
    UndecidableInstances

  build-depends:
    compass,
    base,
    QuickCheck,
    syntactic,
    tasty,
    tasty-golden,
    tasty-quickcheck,
    utf8-string

benchmark monitoring
  type: exitcode-stdio-1.0

  hs-source-dirs: benchmarks

  main-is: Monitoring.hs

  build-depends:
    base,
    criterion >= 1,
    compass

  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    FlexibleContexts

  other-extensions:

